k3s-objects/traefik-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/name: traefik
spec:
  type: ClusterIP
  ports:
  - name: traefik
    port: 9000
    targetPort: traefik
    protocol: TCP
  selector:
    app.kubernetes.io/name: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://traefik.kirillorlov.pro/dashboard/"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/name: Traefik
    gethomepage.dev/description: Your friendly K8s loadbalancer
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=traefik"
    gethomepage.dev/widget.type: traefik
    gethomepage.dev/widget.url: http://traefik-dashboard.kube-system.svc.cluster.local:9000
spec:
  rules:
    - host: traefik.kirillorlov.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
  tls:
    - hosts:
        - traefik.kirillorlov.pro
      secretName: traefik-tls
